added tags and related posts to post layout; and added some dummy blogs pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,18 @@
 ---
 layout: default
 ---
+
+<h1>{{ page.title }}</h1>
+
+<p class="tags"> Tags:
+    {% assign tags_list = page.tags %}
+    {% include tags_list.html %}
+</p>
+
 {{ content }}
+
+<div id="related-posts">
+    <h3>Related Posts</h3>
+    {% assign posts_list = site.related_posts %}
+    {% include posts_list.html %}
+</div>
