--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,15 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+.clearfix{
+    *zoom:1;
+}
+
+.clearfix:after{
+    clear:both;
+    content:"";
+    display:table;
+}
+
 p, h1, h2, h3, h4, h5 {
     margin: 0;
     padding: 0;
@@ -19,8 +29,8 @@ a, a:active, a:link, a:visited, a:hover {
 }
 
 p, li {
-    font-size: 18px;
-    line-height: 29px;
+    font-size: 16px;
+    line-height: 26px;
     text-align: justify;
 }
 
@@ -131,10 +141,18 @@ footer p a.link:hover {
     margin: 0 0 29px 20px;
     border-left: solid 4px #DDD;
     box-shadow: 3px 3px 8px rgba(192, 192, 192, .4);
+    border-radius-bottom-left: 6px;
+    border-radius-top-left: 6px;
 }
 
 .highlight pre {
     padding: 20px;
     border: solid 1px #DDD;
     background-color: #F6F6F6;
+    border-radius-bottom-left: 6px;
+    border-radius-top-left: 6px;
+}
+
+.tags .tag a {
+    margin: 0 10px;
 }
