new posts and content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>jbrunton.com</title>
+        <title>{{ page.title }} - jbrunton.com</title>
         <link href="/public/css/site.css" rel="stylesheet" type="text/css" />
         <link href="/public/css/pygments.css" rel="stylesheet" type="text/css" />
     </head>
@@ -32,6 +32,9 @@
             </div>
         </div>
         <footer>
+            <div class="wrapper footer-content">
+            asd
+            </div>
             <p>Developed and designed by me.
                 <a class="link" target="_blank" href="https://twitter.com/JohnBrunton">@johnbrunton</a></p>
         </footer>
