removed religion content, and restructured the site a bunch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,11 +31,8 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="wrapper footer-content">
-            asd
-            </div>
-            <p>Developed and designed by me.
+        <footer class="wrapper">
+            <p>Site developed and designed by me:
                 <a class="link" target="_blank" href="https://twitter.com/JohnBrunton">@johnbrunton</a></p>
         </footer>
     </body>
