--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,11 @@
             </div>
         </div>
         <footer class="wrapper">
+            <p>I work as a full-stack web and systems engineer across a variety of technologies (including JavaScript/CoffeeScript, Ruby on Rails and <a class="link" target="_blank" href="http://en.wikipedia.org/wiki/Tcl">something called TcL</a>).
+            <p>My background includes .NET/WPF application development with Prism, and I have experience with a number of functional languages (including Haskell and OCaml).  One of the subjects I therefore find interesting is how, with modern languages, the best practices from these different technology stacks and paradigms can be combined to create a best of all worlds.
+            <p>I'm also interested in the theory of software design, and I'm always striving to find ways to make it intuitive and to easily put it into practice.  As such, a lot of content on this site will endeavor to distil the theory down to easily applicable principles.
             <p>Site developed and designed by me:
-                <a class="link" target="_blank" href="https://twitter.com/JohnBrunton">@johnbrunton</a></p>
+                <a class="link" target="_blank" href="https://twitter.com/JohnBrunton">@johnbrunton</a>
         </footer>
     </body>
 </html>
