--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,13 +1,17 @@
 ---
 layout: default
 ---
-<h2 class="post_title">{{page.title}}</h2>
-<ul>
-  {% for post in site.posts %}
-  {% for tag in post.tags %}
-  {% if tag == page.tag %}
-    <li><span id="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
-</ul>
+<div class="clearfix">
+    <div class="two columns">
+        <h2 class="post_title">{{page.title}}</h2>
+        <ul class="posts">
+          {% for post in site.posts %}
+          {% for tag in post.tags %}
+          {% if tag == page.tag %}
+            <li><span id="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+          {% endif %}
+          {% endfor %}
+          {% endfor %}
+        </ul>
+    </div>
+</div>
