--- a/_includes/tags_list.html
+++ b/_includes/tags_list.html
@@ -1,5 +1,5 @@
 {% for tag in tags_list %}
-    <span class="tag"><a href="/tag/{{ tag | url_encode }}">{{ tag }}</a></span>
+    <span class="tag"><a href="/blog/tag/{{ tag | url_encode }}">{{ tag }}</a></span>
 {% endfor %}
 
 {% assign tags_list = nil %}
